<resources>
    <string name="app_name">CityGuideApp</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered by XYZ</string>


    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make a Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back and Enjoy</string>


    <string name="first_slide_desc">You can dsearch any place nearby or within the specified city.We will display specific or allrelated shops to match your search.</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can
    </string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add
    your place by</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your p[ocket then you don\'t
    have to worry</string>

    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>

    <string name="hotels">Hotels</string>
    <string name="restaurants">RESTAURANTS</string>
    <string name="shops">SHOPS</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="education">EDUCATION</string>

    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="login">LOGIN</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="share">SHARE</string>
    <string name="rate_us">RATE US</string>
    <string name="bank">BANK</string>


    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="create_account">Create\nAccount</string>


</resources>